@@ -7,8 +7,8 @@ import org.junit.Before;
 import org.junit.Test;
 import org.springframework.http.HttpStatus;
 import uk.gov.hmcts.reform.wataskmanagementapi.SpringBootFunctionalBaseTest;
+import uk.gov.hmcts.reform.wataskmanagementapi.controllers.request.AssignTaskRequest;
 import uk.gov.hmcts.reform.wataskmanagementapi.controllers.request.SearchTaskRequest;
-import uk.gov.hmcts.reform.wataskmanagementapi.domain.TestAuthenticationCredentials;
 import uk.gov.hmcts.reform.wataskmanagementapi.domain.TestVariables;
 import uk.gov.hmcts.reform.wataskmanagementapi.domain.search.RequestContext;
 import uk.gov.hmcts.reform.wataskmanagementapi.domain.search.SearchOperator;
@@ -21,7 +21,6 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 import static java.util.Arrays.asList;
 import static java.util.Collections.singletonList;
@@ -39,32 +38,26 @@ import static uk.gov.hmcts.reform.wataskmanagementapi.domain.search.parameter.Se
 import static uk.gov.hmcts.reform.wataskmanagementapi.domain.search.parameter.SearchParameterKey.LOCATION;
 import static uk.gov.hmcts.reform.wataskmanagementapi.domain.search.parameter.SearchParameterKey.ROLE_CATEGORY;
 import static uk.gov.hmcts.reform.wataskmanagementapi.domain.search.parameter.SearchParameterKey.TASK_TYPE;
+import static uk.gov.hmcts.reform.wataskmanagementapi.domain.search.parameter.SearchParameterKey.USER;
 
 @SuppressWarnings("checkstyle:LineLength")
 @Slf4j
 public class PostTaskSearchControllerTest extends SpringBootFunctionalBaseTest {
 
     private static final String ENDPOINT_BEING_TESTED = "task";
-
-    private TestAuthenticationCredentials caseworkerCredentials;
-    private TestAuthenticationCredentials granularPermissionCaseworkerCredentials;
-    private TestAuthenticationCredentials ginIndexCaseworkerCredentials;
+    private static final String ASSIGNED_ENDPOINT = "task/{task-id}/assign";
 
     @Before
     public void setUp() {
-        caseworkerCredentials = authorizationProvider.getNewTribunalCaseworker("wa-ft-test-r2-");
-        ginIndexCaseworkerCredentials = authorizationProvider.getNewTribunalCaseworker("wa-gin-index-");
-        granularPermissionCaseworkerCredentials = authorizationProvider
-            .getNewTribunalCaseworker("wa-granular-permission-");
+        caseworkerCredentials = authorizationProvider.getNewTribunalCaseworker(EMAIL_PREFIX_R3_5);
+        ginIndexCaseworkerCredentials = authorizationProvider.getNewTribunalCaseworker(EMAIL_PREFIX_GIN_INDEX);
     }
 
     @After
     public void cleanUp() {
         common.clearAllRoleAssignments(caseworkerCredentials.getHeaders());
-        common.clearAllRoleAssignments(granularPermissionCaseworkerCredentials.getHeaders());
         common.clearAllRoleAssignments(ginIndexCaseworkerCredentials.getHeaders());
         authorizationProvider.deleteAccount(caseworkerCredentials.getAccount().getUsername());
-        authorizationProvider.deleteAccount(granularPermissionCaseworkerCredentials.getAccount().getUsername());
         authorizationProvider.deleteAccount(ginIndexCaseworkerCredentials.getAccount().getUsername());
     }
 
@@ -82,8 +75,8 @@ public class PostTaskSearchControllerTest extends SpringBootFunctionalBaseTest {
         tasksCreated.add(taskVariables);
         initiateTask(taskVariables);
 
-        List<String> taskIds = tasksCreated.stream().map(TestVariables::getTaskId).collect(Collectors.toList());
-        List<String> caseIds = tasksCreated.stream().map(TestVariables::getCaseId).collect(Collectors.toList());
+        List<String> taskIds = tasksCreated.stream().map(TestVariables::getTaskId).toList();
+        List<String> caseIds = tasksCreated.stream().map(TestVariables::getCaseId).toList();
 
         SearchTaskRequest searchTaskRequest = new SearchTaskRequest(
             RequestContext.ALL_WORK,
@@ -127,7 +120,7 @@ public class PostTaskSearchControllerTest extends SpringBootFunctionalBaseTest {
             .body("tasks.warnings", everyItem(equalTo(false)))
             .body("tasks.case_management_category", everyItem(equalTo("Protection")))
             .body("tasks.work_type_id", everyItem(equalTo("hearing_work")))
-            .body("tasks.permissions.values", everyItem(equalToObject(List.of("Read", "Own"))))
+            .body("tasks.permissions.values", everyItem(equalToObject(List.of("Read", "Own", "Manage", "CompleteOwn", "CancelOwn", "Claim"))))
             .body("tasks.description", everyItem(equalTo("[Decide an application](/case/WA/WaCaseType/${[CASE_REFERENCE]}/"
                                                          + "trigger/decideAnApplication)")))
             .body("tasks.role_category", everyItem(equalTo("LEGAL_OPERATIONS")))
@@ -164,13 +157,15 @@ public class PostTaskSearchControllerTest extends SpringBootFunctionalBaseTest {
         tasksCreated.add(taskVariables);
         initiateTask(taskVariables);
 
-        common.setupHearingPanelJudgeForStandardAccess(granularPermissionCaseworkerCredentials.getHeaders(),
+        common.setupHearingPanelJudgeForStandardAccess(caseworkerCredentials.getHeaders(),
             "WA",
             "WaCaseType"
         );
 
-        List<String> taskIds = tasksCreated.stream().map(TestVariables::getTaskId).collect(Collectors.toList());
-        List<String> caseIds = tasksCreated.stream().map(TestVariables::getCaseId).collect(Collectors.toList());
+        List<String> taskIds = tasksCreated.stream().map(TestVariables::getTaskId).toList();
+        ;
+        List<String> caseIds = tasksCreated.stream().map(TestVariables::getCaseId).toList();
+        ;
 
         SearchTaskRequest searchTaskRequest = new SearchTaskRequest(
             RequestContext.ALL_WORK,
@@ -184,7 +179,7 @@ public class PostTaskSearchControllerTest extends SpringBootFunctionalBaseTest {
         Response result = restApiActions.post(
             ENDPOINT_BEING_TESTED + "?first_result=0&max_results=10",
             searchTaskRequest,
-            granularPermissionCaseworkerCredentials.getHeaders()
+            caseworkerCredentials.getHeaders()
         );
 
         result.then().assertThat()
@@ -213,7 +208,7 @@ public class PostTaskSearchControllerTest extends SpringBootFunctionalBaseTest {
             .body("tasks.warnings", everyItem(equalTo(false)))
             .body("tasks.case_management_category", everyItem(equalTo("Protection")))
             .body("tasks.work_type_id", everyItem(equalTo("hearing_work")))
-            .body("tasks.permissions.values", everyItem(equalToObject(List.of("Manage"))))
+            .body("tasks.permissions.values", everyItem(equalToObject(List.of("Manage", "Complete", "Assign", "Unassign"))))
             .body("tasks.description", everyItem(equalTo("[Decide an application](/case/WA/WaCaseType/${[CASE_REFERENCE]}/"
                                                          + "trigger/decideAnApplication)")))
             .body("tasks.role_category", everyItem(equalTo("LEGAL_OPERATIONS")))
@@ -237,7 +232,7 @@ public class PostTaskSearchControllerTest extends SpringBootFunctionalBaseTest {
     @Test
     public void should_return_a_200_with_search_results_and_additional_properties_and_granular_permission() {
 
-        common.setupWAOrganisationalRoleAssignment(granularPermissionCaseworkerCredentials.getHeaders());
+        common.setupWAOrganisationalRoleAssignment(caseworkerCredentials.getHeaders());
         String roleAssignmentId = UUID.randomUUID().toString();
         Map<String, String> additionalProperties = Map.of(
             "roleAssignmentId", roleAssignmentId,
@@ -260,8 +255,8 @@ public class PostTaskSearchControllerTest extends SpringBootFunctionalBaseTest {
         tasksCreated.add(taskVariables);
         initiateTask(taskVariables, additionalProperties);
 
-        List<String> taskIds = tasksCreated.stream().map(TestVariables::getTaskId).collect(Collectors.toList());
-        List<String> caseIds = tasksCreated.stream().map(TestVariables::getCaseId).collect(Collectors.toList());
+        List<String> caseIds = tasksCreated.stream().map(TestVariables::getCaseId).toList();
+        ;
 
         SearchTaskRequest searchTaskRequest = new SearchTaskRequest(
             RequestContext.ALL_WORK,
@@ -275,16 +270,16 @@ public class PostTaskSearchControllerTest extends SpringBootFunctionalBaseTest {
         Response result = restApiActions.post(
             ENDPOINT_BEING_TESTED + "?first_result=0&max_results=10",
             searchTaskRequest,
-            granularPermissionCaseworkerCredentials.getHeaders()
+            caseworkerCredentials.getHeaders()
         );
 
         result.then().assertThat()
             .statusCode(HttpStatus.OK.value())
             .body("tasks.size()", lessThanOrEqualTo(10)) //Default max results
-            .body("tasks.name", everyItem(equalTo("process application")))
+            .body("tasks.name", everyItem(equalTo("A Task")))
             .body("tasks.case_management_category", everyItem(equalTo("Protection")))
-            .body("tasks.work_type_id", everyItem(equalTo("hearing_work")))
-            .body("tasks.permissions.values", everyItem(equalToObject(List.of("Read", "Own", "CompleteOwn", "CancelOwn", "Claim"))));
+            .body("tasks.work_type_id", everyItem(equalTo("access_requests")))
+            .body("tasks.permissions.values", everyItem(equalToObject(List.of("Read", "Own", "Manage", "Claim"))));
 
         tasksCreated
             .forEach(task -> common.cleanUpTask(task.getTaskId()));
@@ -315,8 +310,8 @@ public class PostTaskSearchControllerTest extends SpringBootFunctionalBaseTest {
         tasksCreated.add(taskVariables);
         initiateTask(taskVariables, additionalProperties);
 
-        List<String> taskIds = tasksCreated.stream().map(TestVariables::getTaskId).collect(Collectors.toList());
-        List<String> caseIds = tasksCreated.stream().map(TestVariables::getCaseId).collect(Collectors.toList());
+        List<String> taskIds = tasksCreated.stream().map(TestVariables::getTaskId).toList();
+        List<String> caseIds = tasksCreated.stream().map(TestVariables::getCaseId).toList();
 
         SearchTaskRequest searchTaskRequest = new SearchTaskRequest(
             RequestContext.ALL_WORK,
@@ -359,8 +354,8 @@ public class PostTaskSearchControllerTest extends SpringBootFunctionalBaseTest {
         tasksCreated.add(taskVariables);
         initiateTask(taskVariables);
 
-        List<String> taskIds = tasksCreated.stream().map(TestVariables::getTaskId).collect(Collectors.toList());
-        List<String> caseIds = tasksCreated.stream().map(TestVariables::getCaseId).collect(Collectors.toList());
+        List<String> taskIds = tasksCreated.stream().map(TestVariables::getTaskId).toList();
+        List<String> caseIds = tasksCreated.stream().map(TestVariables::getCaseId).toList();
 
         SearchTaskRequest searchTaskRequest = new SearchTaskRequest(
             RequestContext.ALL_WORK,
@@ -403,8 +398,8 @@ public class PostTaskSearchControllerTest extends SpringBootFunctionalBaseTest {
         tasksCreated.add(taskVariables);
         initiateTask(taskVariables, caseworkerCredentials.getHeaders());
 
-        List<String> taskIds = tasksCreated.stream().map(TestVariables::getTaskId).collect(Collectors.toList());
-        List<String> caseIds = tasksCreated.stream().map(TestVariables::getCaseId).collect(Collectors.toList());
+        List<String> taskIds = tasksCreated.stream().map(TestVariables::getTaskId).toList();
+        List<String> caseIds = tasksCreated.stream().map(TestVariables::getCaseId).toList();
 
         SearchTaskRequest searchTaskRequest = new SearchTaskRequest(asList(
             new SearchParameterList(JURISDICTION, SearchOperator.IN, singletonList("WA")),
@@ -458,7 +453,6 @@ public class PostTaskSearchControllerTest extends SpringBootFunctionalBaseTest {
             .forEach(task -> common.cleanUpTask(task.getTaskId()));
     }
 
-
     @Test
     public void should_return_200_with_tasks_sorted_on_next_hearing_date_asc() {
         common.setupWAOrganisationalRoleAssignment(caseworkerCredentials.getHeaders());
@@ -472,10 +466,11 @@ public class PostTaskSearchControllerTest extends SpringBootFunctionalBaseTest {
         tasksCreated.add(taskVariables);
         initiateTask(taskVariables);
 
-        List<String> taskIds = tasksCreated.stream().map(TestVariables::getTaskId).collect(Collectors.toList());
-        List<String> caseIds = tasksCreated.stream().map(TestVariables::getCaseId).collect(Collectors.toList());
+        List<String> taskIds = tasksCreated.stream().map(TestVariables::getTaskId).toList();
+        List<String> caseIds = tasksCreated.stream().map(TestVariables::getCaseId).toList();
 
         SearchTaskRequest searchTaskRequest = new SearchTaskRequest(
+            RequestContext.AVAILABLE_TASKS,
             asList(
                 new SearchParameterList(JURISDICTION, SearchOperator.IN, singletonList("WA")),
                 new SearchParameterList(LOCATION, SearchOperator.IN, singletonList("765324")),
@@ -526,8 +521,8 @@ public class PostTaskSearchControllerTest extends SpringBootFunctionalBaseTest {
             "WaCaseType"
         );
 
-        List<String> taskIds = tasksCreated.stream().map(TestVariables::getTaskId).collect(Collectors.toList());
-        List<String> caseIds = tasksCreated.stream().map(TestVariables::getCaseId).collect(Collectors.toList());
+        List<String> taskIds = tasksCreated.stream().map(TestVariables::getTaskId).toList();
+        List<String> caseIds = tasksCreated.stream().map(TestVariables::getCaseId).toList();
 
         SearchTaskRequest searchTaskRequest = new SearchTaskRequest(
             RequestContext.ALL_WORK,
@@ -570,7 +565,7 @@ public class PostTaskSearchControllerTest extends SpringBootFunctionalBaseTest {
             .body("tasks.warnings", everyItem(equalTo(false)))
             .body("tasks.case_management_category", everyItem(equalTo("Protection")))
             .body("tasks.work_type_id", everyItem(equalTo("hearing_work")))
-            .body("tasks.permissions.values", everyItem(equalToObject(List.of("Manage"))))
+            .body("tasks.permissions.values", everyItem(equalToObject(List.of("Manage", "Complete", "Assign", "Unassign"))))
             .body("tasks.description", everyItem(equalTo("[Decide an application](/case/WA/WaCaseType/${[CASE_REFERENCE]}/"
                                                          + "trigger/decideAnApplication)")))
             .body("tasks.role_category", everyItem(equalTo("LEGAL_OPERATIONS")))
@@ -592,9 +587,98 @@ public class PostTaskSearchControllerTest extends SpringBootFunctionalBaseTest {
     }
 
     @Test
+    public void should_return_a_200_with_search_results_for_my_work_and_correct_properties_using_search_index() {
+
+        TestVariables taskVariables = common.setupWATaskAndRetrieveIds("requests/ccd/wa_case_data.json",
+            "processApplication",
+            "process application");
+        initiateTask(taskVariables);
+
+        String taskId = taskVariables.getTaskId();
+
+        common.setupHearingPanelJudgeForSpecificAccess(caseworkerCredentials.getHeaders(),
+            taskVariables.getCaseId(), WA_JURISDICTION, WA_CASE_TYPE);
+        common.setupCaseManagerForSpecificAccess(ginIndexCaseworkerCredentials.getHeaders(),
+            taskVariables.getCaseId(), WA_JURISDICTION, WA_CASE_TYPE);
+
+        String assigneeId = getAssigneeId(ginIndexCaseworkerCredentials.getHeaders());
+        Response result = restApiActions.post(
+            ASSIGNED_ENDPOINT,
+            taskId,
+            new AssignTaskRequest(assigneeId),
+            caseworkerCredentials.getHeaders()
+        );
+
+        result.then().assertThat()
+            .statusCode(HttpStatus.NO_CONTENT.value());
+
+        String caseId = taskVariables.getCaseId();
+        SearchTaskRequest searchTaskRequest = new SearchTaskRequest(
+            asList(
+                new SearchParameterList(JURISDICTION, SearchOperator.IN, singletonList("WA")),
+                new SearchParameterList(LOCATION, SearchOperator.IN, singletonList("765324")),
+                new SearchParameterList(USER, SearchOperator.IN, singletonList(assigneeId)),
+                new SearchParameterList(CASE_ID, SearchOperator.IN, singletonList(caseId))
+            )
+        );
+
+        result = restApiActions.post(
+            ENDPOINT_BEING_TESTED + "?first_result=0&max_results=10",
+            searchTaskRequest,
+            ginIndexCaseworkerCredentials.getHeaders()
+        );
+
+        result.then().assertThat()
+            .statusCode(HttpStatus.OK.value())
+            .body("tasks.size()", lessThanOrEqualTo(10)) //Default max results
+            .body("tasks.id", everyItem(notNullValue()))
+            .body("tasks.id", everyItem(equalTo(taskId)))
+            .body("tasks.name", everyItem(equalTo("process application")))
+            .body("tasks.type", everyItem(equalTo("processApplication")))
+            .body("tasks.task_state", everyItem(equalTo("assigned")))
+            .body("tasks.task_system", everyItem(equalTo("SELF")))
+            .body("tasks.security_classification", everyItem(equalTo("PUBLIC")))
+            .body("tasks.task_title", everyItem(equalTo("process application")))
+            .body("tasks.created_date", everyItem(notNullValue()))
+            .body("tasks.due_date", everyItem(notNullValue()))
+            .body("tasks.location_name", everyItem(equalTo("Taylor House")))
+            .body("tasks.location", everyItem(equalTo("765324")))
+            .body("tasks.execution_type", everyItem(equalTo("Case Management Task")))
+            .body("tasks.jurisdiction", everyItem(equalTo("WA")))
+            .body("tasks.region", everyItem(equalTo("1")))
+            .body("tasks.case_type_id", everyItem(equalTo("WaCaseType")))
+            .body("tasks.case_id", everyItem(equalTo(caseId)))
+            .body("tasks.case_category", everyItem(equalTo("Protection")))
+            .body("tasks.case_name", everyItem(equalTo("Bob Smith")))
+            .body("tasks.auto_assigned", everyItem(equalTo(false)))
+            .body("tasks.warnings", everyItem(equalTo(false)))
+            .body("tasks.case_management_category", everyItem(equalTo("Protection")))
+            .body("tasks.work_type_id", everyItem(equalTo("hearing_work")))
+            .body("tasks.permissions.values", everyItem(equalToObject(List.of("Read", "Own", "Manage",
+                "CompleteOwn", "CancelOwn", "Claim"))))
+            .body("tasks.description", everyItem(equalTo("[Decide an application](/case/WA/WaCaseType/${[CASE_REFERENCE]}/"
+                                                         + "trigger/decideAnApplication)")))
+            .body("tasks.role_category", everyItem(equalTo("LEGAL_OPERATIONS")))
+            .body("tasks.next_hearing_id", everyItem(equalTo("next-hearing-id")))
+            .body("tasks.next_hearing_date", everyItem(notNullValue()))
+            .body("tasks.additional_properties", everyItem(equalToObject(Map.of(
+                "key1", "value1",
+                "key2", "value2",
+                "key3", "value3",
+                "key4", "value4"
+            ))))
+            .body("tasks.priority_date", everyItem(notNullValue()))
+            .body("tasks.minor_priority", everyItem(equalTo(500)))
+            .body("tasks.major_priority", everyItem(equalTo(1000)))
+            .body("total_records", equalTo(1));
+
+        common.cleanUpTask(taskId);
+    }
+
+    @Test
     public void should_return_a_200_with_search_results_with_additional_properties_using_search_index() {
 
-        common.setupWAOrganisationalRoleAssignment(granularPermissionCaseworkerCredentials.getHeaders());
+        common.setupWAOrganisationalRoleAssignment(caseworkerCredentials.getHeaders());
         String roleAssignmentId = UUID.randomUUID().toString();
         Map<String, String> additionalProperties = Map.of(
             "roleAssignmentId", roleAssignmentId,
@@ -617,8 +701,10 @@ public class PostTaskSearchControllerTest extends SpringBootFunctionalBaseTest {
         tasksCreated.add(taskVariables);
         initiateTask(taskVariables, additionalProperties);
 
-        List<String> taskIds = tasksCreated.stream().map(TestVariables::getTaskId).collect(Collectors.toList());
-        List<String> caseIds = tasksCreated.stream().map(TestVariables::getCaseId).collect(Collectors.toList());
+        List<String> taskIds = tasksCreated.stream().map(TestVariables::getTaskId).toList();
+        ;
+        List<String> caseIds = tasksCreated.stream().map(TestVariables::getCaseId).toList();
+        ;
 
         SearchTaskRequest searchTaskRequest = new SearchTaskRequest(
             RequestContext.ALL_WORK,
@@ -632,16 +718,16 @@ public class PostTaskSearchControllerTest extends SpringBootFunctionalBaseTest {
         Response result = restApiActions.post(
             ENDPOINT_BEING_TESTED + "?first_result=0&max_results=10",
             searchTaskRequest,
-            granularPermissionCaseworkerCredentials.getHeaders()
+            caseworkerCredentials.getHeaders()
         );
 
         result.then().assertThat()
             .statusCode(HttpStatus.OK.value())
             .body("tasks.size()", lessThanOrEqualTo(10)) //Default max results
-            .body("tasks.name", everyItem(equalTo("process application")))
+            .body("tasks.name", everyItem(equalTo("A Task")))
             .body("tasks.case_management_category", everyItem(equalTo("Protection")))
-            .body("tasks.work_type_id", everyItem(equalTo("hearing_work")))
-            .body("tasks.permissions.values", everyItem(equalToObject(List.of("Read", "Own", "CompleteOwn", "CancelOwn", "Claim"))));
+            .body("tasks.work_type_id", everyItem(equalTo("access_requests")))
+            .body("tasks.permissions.values", everyItem(equalToObject(List.of("Read", "Own", "Manage", "Claim"))));
 
         tasksCreated
             .forEach(task -> common.cleanUpTask(task.getTaskId()));
@@ -660,8 +746,8 @@ public class PostTaskSearchControllerTest extends SpringBootFunctionalBaseTest {
         tasksCreated.add(taskVariables);
         initiateTask(taskVariables);
 
-        List<String> taskIds = tasksCreated.stream().map(TestVariables::getTaskId).collect(Collectors.toList());
-        List<String> caseIds = tasksCreated.stream().map(TestVariables::getCaseId).collect(Collectors.toList());
+        List<String> taskIds = tasksCreated.stream().map(TestVariables::getTaskId).toList();
+        List<String> caseIds = tasksCreated.stream().map(TestVariables::getCaseId).toList();
 
         SearchTaskRequest searchTaskRequest = new SearchTaskRequest(
             RequestContext.AVAILABLE_TASKS,
@@ -704,8 +790,10 @@ public class PostTaskSearchControllerTest extends SpringBootFunctionalBaseTest {
         tasksCreated.add(taskVariables);
         initiateTask(taskVariables, ginIndexCaseworkerCredentials.getHeaders());
 
-        List<String> taskIds = tasksCreated.stream().map(TestVariables::getTaskId).collect(Collectors.toList());
-        List<String> caseIds = tasksCreated.stream().map(TestVariables::getCaseId).collect(Collectors.toList());
+        List<String> taskIds = tasksCreated.stream().map(TestVariables::getTaskId).toList();
+        ;
+        List<String> caseIds = tasksCreated.stream().map(TestVariables::getCaseId).toList();
+        ;
 
         SearchTaskRequest searchTaskRequest = new SearchTaskRequest(asList(
             new SearchParameterList(JURISDICTION, SearchOperator.IN, singletonList("WA")),
@@ -773,8 +861,10 @@ public class PostTaskSearchControllerTest extends SpringBootFunctionalBaseTest {
         tasksCreated.add(taskVariables);
         initiateTask(taskVariables);
 
-        List<String> taskIds = tasksCreated.stream().map(TestVariables::getTaskId).collect(Collectors.toList());
-        List<String> caseIds = tasksCreated.stream().map(TestVariables::getCaseId).collect(Collectors.toList());
+        List<String> taskIds = tasksCreated.stream().map(TestVariables::getTaskId).toList();
+        ;
+        List<String> caseIds = tasksCreated.stream().map(TestVariables::getCaseId).toList();
+        ;
 
         SearchTaskRequest searchTaskRequest = new SearchTaskRequest(
             RequestContext.AVAILABLE_TASKS,
